# SP2025

./: CMakeLists.txt
aud10/: pr1.cpp  zad1.cpp  zad10.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud11/: p1.1.cpp  zad1.cpp  zad2.cpp  zad3.cpp
aud12/: pr1.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.1.cpp  zad5.cpp  zad6.cpp  zad7.cpp
aud1_2/: main.cpp  zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud3/: zad0.cpp  zad1.cpp  zad10.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud3/zad1.dSYM/Contents/Resources/DWARF/: zad1
aud3/zad3.dSYM/Contents/Resources/DWARF/: zad3
aud4/: pr1.cpp  pr2.cpp  pr3.cpp  pr4.cpp  zad1a.cpp  zad1b.cpp  zad2.cpp  zad3.cpp  zad8.cpp
aud5/: pr1.cpp  switch_1.cpp  switch_2.cpp  switch_p1.cpp  zad10.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud6/: pr1.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
aud8/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
aud9/: kol_2.cpp  pr1.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
kol_siis/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
zad10.dSYM/Contents/: Info.plist
zad10.dSYM/Contents/Resources/DWARF/: zad10
zad10.dSYM/Contents/Resources/Relocations/aarch64/: zad10.yml
