cmake_minimum_required(VERSION 4.0)
project(SP_2025)

set(CMAKE_CXX_STANDARD 20)

add_executable(SP_2025 aud1_2/main.cpp)

add_executable(zad1 aud1_2/zad1.cpp)
add_executable(zad2 aud3/zad2.cpp)
add_executable(zad3 aud3/zad0.cpp)
add_executable(zad4 aud3/zad4.cpp)
add_executable(zad5 aud1_2/zad5.cpp)
add_executable(zad7 aud1_2/zad7.cpp)
add_executable(zad8 aud1_2/zad8.cpp)
add_executable(zad9 aud1_2/zad9.cpp)
add_executable(zad10 aud1_2/zad10.cpp)
add_executable(zad11 aud1_2/zad11.cpp)
add_executable(zad12 aud1_2/zad12.cpp)

add_executable(zad6 aud3/zad6.cpp)
